RTC6/RTC6 Files/Linux/debian-bullseye/usr/share/scanlab/examples/1/scanlab/rtc6.h

    typedef int32_t LONG;     //  LONG  is assumed to be 4 Bytes
    typedef uint32_t UINT;     //  UINT  is assumed to be 4 Bytes
    typedef uintptr_t ULONG_PTR;
RTC6_API void __stdcall n_get_waveform_offset(const UINT CardNo, const UINT Channel, const UINT Offset, const UINT Number, const ULONG_PTR Ptr);
RTC6_API void __stdcall n_get_waveform(const UINT CardNo, const UINT Channel, const UINT Number, const ULONG_PTR Ptr);
RTC6_API void __stdcall n_bounce_supp(const UINT CardNo, const UINT Length);
RTC6_API void __stdcall n_home_position_4(const UINT CardNo, const LONG X0Home, const LONG X1Home, const LONG X2Home, const LONG X3Home);
RTC6_API void __stdcall n_get_home_position_4(const UINT CardNo, LONG* X0Home, LONG* X1Home, LONG* X2Home, LONG* X3Home);
RTC6_API void __stdcall n_set_home_4_return_time(const UINT CardNo, const UINT Time);
RTC6_API UINT __stdcall n_get_home_4_return_time(const UINT CardNo);
RTC6_API void __stdcall n_home_position_xyz(const UINT CardNo, const LONG XHome, const LONG YHome, const LONG ZHome);
RTC6_API void __stdcall n_home_position(const UINT CardNo, const LONG XHome, const LONG YHome);
RTC6_API UINT __stdcall n_uart_config(const UINT CardNo, const UINT BaudRate);
RTC6_API void __stdcall n_rs232_config(const UINT CardNo, const UINT BaudRate);
RTC6_API void __stdcall n_rs232_write_data(const UINT CardNo, const UINT Data);
RTC6_API void __stdcall n_rs232_write_text(const UINT CardNo, const char* pData);
RTC6_API UINT __stdcall n_rs232_read_data(const UINT CardNo);
RTC6_API UINT __stdcall n_set_mcbsp_freq(const UINT CardNo, const UINT Freq);
RTC6_API void __stdcall n_mcbsp_init(const UINT CardNo, const UINT XDelay, const UINT RDelay);
RTC6_API void __stdcall n_mcbsp_init_spi(const UINT CardNo, const UINT ClockLevel, const UINT ClockDelay);
RTC6_API UINT __stdcall n_get_overrun(const UINT CardNo);
RTC6_API UINT __stdcall n_get_master_slave(const UINT CardNo);
RTC6_API void __stdcall n_get_transform(const UINT CardNo, const UINT Number, const ULONG_PTR Ptr1, const ULONG_PTR Ptr2, const ULONG_PTR Ptr, const UINT Code);
RTC6_API void __stdcall n_get_transform_offset(const UINT CardNo, const UINT Channel1, const UINT Channel2, const UINT Offset, const UINT Number, const ULONG_PTR Ptr1, const ULONG_PTR Ptr2, const ULONG_PTR Ptr, const UINT Code);
RTC6_API void __stdcall n_stop_trigger(const UINT CardNo);
RTC6_API void __stdcall n_move_to(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_set_enduring_wobbel(const UINT CardNo, const UINT CenterX, const UINT CenterY, const UINT CenterZ, const UINT LimitHi, const UINT LimitLo, const double ScaleX, const double ScaleY, const double ScaleZ);
RTC6_API void __stdcall n_set_enduring_wobbel_2(const UINT CardNo, const UINT CenterX, const UINT CenterY, const UINT CenterZ, const UINT LimitHi, const UINT LimitLo, const double ScaleX, const double ScaleY, const double ScaleZ);
RTC6_API void __stdcall n_set_free_variable(const UINT CardNo, const UINT VarNo, const UINT Value);
RTC6_API UINT __stdcall n_get_free_variable(const UINT CardNo, const UINT VarNo);
RTC6_API void __stdcall n_set_mcbsp_out_ptr(const UINT CardNo, const UINT Number, const ULONG_PTR SignalPtr);
RTC6_API void __stdcall n_set_mcbsp_out_oie_ctrl(const UINT CardNo, const UINT Signal1, const UINT Signal2);
RTC6_API void __stdcall n_periodic_toggle(const UINT CardNo, const UINT Port, const UINT Mask, const UINT P1, const UINT P2, const UINT Count, const UINT Start);
RTC6_API void __stdcall n_multi_axis_config(const UINT CardNo, const UINT Cfg, const ULONG_PTR Ptr);
RTC6_API void __stdcall n_quad_axis_init(const UINT CardNo, const UINT Idle, const double X1, const double Y1);
RTC6_API UINT __stdcall n_quad_axis_get_status(const UINT CardNo);
RTC6_API void __stdcall n_quad_axis_get_values(const UINT CardNo, double* X1, double* Y1, UINT* Flags0, UINT* Flags1);
RTC6_API double __stdcall n_get_temperature(const UINT CardNo);
RTC6_API double __stdcall get_time(void);
RTC6_API double __stdcall get_lap_time(void);
RTC6_API void __stdcall measurement_status(UINT* Busy, UINT* Pos);
RTC6_API void __stdcall get_waveform_offset(const UINT Channel, const UINT Offset, const UINT Number, const ULONG_PTR Ptr);
RTC6_API void __stdcall get_waveform(const UINT Channel, const UINT Number, const ULONG_PTR Ptr);
RTC6_API void __stdcall bounce_supp(const UINT Length);
RTC6_API void __stdcall home_position_4(const LONG X0Home, const LONG X1Home, const LONG X2Home, const LONG X3Home);
RTC6_API void __stdcall get_home_position_4(LONG* X0Home, LONG* X1Home, LONG* X2Home, LONG* X3Home);
RTC6_API void __stdcall set_home_4_return_time(const UINT Time);
RTC6_API UINT __stdcall get_home_4_return_time(void);
RTC6_API void __stdcall home_position_xyz(const LONG XHome, const LONG YHome, const LONG ZHome);
RTC6_API void __stdcall home_position(const LONG XHome, const LONG YHome);
RTC6_API UINT __stdcall uart_config(const UINT BaudRate);
RTC6_API void __stdcall rs232_config(const UINT BaudRate);
RTC6_API void __stdcall rs232_write_data(const UINT Data);
RTC6_API void __stdcall rs232_write_text(const char* pData);
RTC6_API UINT __stdcall rs232_read_data(void);
RTC6_API UINT __stdcall set_mcbsp_freq(const UINT Freq);
RTC6_API void __stdcall mcbsp_init(const UINT XDelay, const UINT RDelay);
RTC6_API void __stdcall mcbsp_init_spi(const UINT ClockLevel, const UINT ClockDelay);
RTC6_API UINT __stdcall get_overrun(void);
RTC6_API UINT __stdcall get_master_slave(void);
RTC6_API void __stdcall get_transform(const UINT Number, const ULONG_PTR Ptr1, const ULONG_PTR Ptr2, const ULONG_PTR Ptr, const UINT Code);
RTC6_API void __stdcall get_transform_offset(const UINT Channel1, const UINT Channel2, const UINT Offset, const UINT Number, const ULONG_PTR Ptr1, const ULONG_PTR Ptr2, const ULONG_PTR Ptr, const UINT Code);
RTC6_API void __stdcall stop_trigger(void);
RTC6_API void __stdcall move_to(const UINT Pos);
RTC6_API void __stdcall set_enduring_wobbel(const UINT CenterX, const UINT CenterY, const UINT CenterZ, const UINT LimitHi, const UINT LimitLo, const double ScaleX, const double ScaleY, const double ScaleZ);
RTC6_API void __stdcall set_enduring_wobbel_2(const UINT CenterX, const UINT CenterY, const UINT CenterZ, const UINT LimitHi, const UINT LimitLo, const double ScaleX, const double ScaleY, const double ScaleZ);
RTC6_API void __stdcall set_free_variable(const UINT VarNo, const UINT Value);
RTC6_API UINT __stdcall get_free_variable(const UINT VarNo);
RTC6_API void __stdcall set_mcbsp_out_ptr(const UINT Number, const ULONG_PTR SignalPtr);
RTC6_API void __stdcall set_mcbsp_out_oie_ctrl(const UINT Signal1, const UINT Signal2);
RTC6_API void __stdcall periodic_toggle(const UINT Port, const UINT Mask, const UINT P1, const UINT P2, const UINT Count, const UINT Start);
RTC6_API void __stdcall multi_axis_config(const UINT Cfg, const ULONG_PTR Ptr);
RTC6_API void __stdcall quad_axis_init(const UINT Idle, const double X1, const double Y1);
RTC6_API UINT __stdcall quad_axis_get_status(void);
RTC6_API void __stdcall quad_axis_get_values(double* X1, double* Y1, UINT* Flags0, UINT* Flags1);
RTC6_API double __stdcall get_temperature(void);
RTC6_API void __stdcall n_set_defocus(const UINT CardNo, const LONG Shift);
RTC6_API void __stdcall n_set_defocus_offset(const UINT CardNo, const LONG Shift);
RTC6_API void __stdcall n_goto_xyz(const UINT CardNo, const LONG X, const LONG Y, const LONG Z);
RTC6_API void __stdcall n_set_zoom(const UINT CardNo, const UINT Zoom);
RTC6_API void __stdcall n_goto_xy(const UINT CardNo, const LONG X, const LONG Y);
RTC6_API LONG __stdcall n_get_z_distance(const UINT CardNo, const LONG X, const LONG Y, const LONG Z);
RTC6_API void __stdcall set_defocus(const LONG Shift);
RTC6_API void __stdcall set_defocus_offset(const LONG Shift);
RTC6_API void __stdcall goto_xyz(const LONG X, const LONG Y, const LONG Z);
RTC6_API void __stdcall goto_xy(const LONG X, const LONG Y);
RTC6_API void __stdcall set_zoom(const UINT Zoom);
RTC6_API LONG __stdcall get_z_distance(const LONG X, const LONG Y, const LONG Z);
RTC6_API void __stdcall n_set_offset_xyz(const UINT CardNo, const UINT HeadNo, const LONG XOffset, const LONG YOffset, const LONG ZOffset, const UINT at_once);
RTC6_API void __stdcall n_set_offset(const UINT CardNo, const UINT HeadNo, const LONG XOffset, const LONG YOffset, const UINT at_once);
RTC6_API void __stdcall n_set_matrix(const UINT CardNo, const UINT HeadNo, const double M11, const double M12, const double M21, const double M22, const UINT at_once);
RTC6_API void __stdcall n_set_angle(const UINT CardNo, const UINT HeadNo, const double Angle, const UINT at_once);
RTC6_API void __stdcall n_set_scale(const UINT CardNo, const UINT HeadNo, const double Scale, const UINT at_once);
RTC6_API void __stdcall n_apply_mcbsp(const UINT CardNo, const UINT HeadNo, const UINT at_once);
RTC6_API UINT __stdcall n_upload_transform(const UINT CardNo, const UINT HeadNo, const ULONG_PTR Ptr);
RTC6_API void __stdcall set_offset_xyz(const UINT HeadNo, const LONG XOffset, const LONG YOffset, const LONG ZOffset, const UINT at_once);
RTC6_API void __stdcall set_offset(const UINT HeadNo, const LONG XOffset, const LONG YOffset, const UINT at_once);
RTC6_API void __stdcall set_matrix(const UINT HeadNo, const double M11, const double M12, const double M21, const double M22, const UINT at_once);
RTC6_API void __stdcall set_angle(const UINT HeadNo, const double Angle, const UINT at_once);
RTC6_API void __stdcall set_scale(const UINT HeadNo, const double Scale, const UINT at_once);
RTC6_API void __stdcall apply_mcbsp(const UINT HeadNo, const UINT at_once);
RTC6_API UINT __stdcall upload_transform(const UINT HeadNo, const ULONG_PTR Ptr);
RTC6_API void __stdcall n_set_delay_mode(const UINT CardNo, const UINT VarPoly, const UINT DirectMove3D, const UINT EdgeLevel, const UINT MinJumpDelay, const UINT JumpLengthLimit);
RTC6_API void __stdcall n_set_jump_speed_ctrl(const UINT CardNo, const double Speed);
RTC6_API void __stdcall n_set_mark_speed_ctrl(const UINT CardNo, const double Speed);
RTC6_API void __stdcall n_set_sky_writing_para(const UINT CardNo, const double Timelag, const LONG LaserOnShift, const UINT Nprev, const UINT Npost);
RTC6_API void __stdcall n_set_sky_writing_limit(const UINT CardNo, const double CosAngle);
RTC6_API void __stdcall n_set_sky_writing_mode(const UINT CardNo, const UINT Mode);
RTC6_API LONG __stdcall n_load_varpolydelay(const UINT CardNo, const char* Name, const UINT No);
RTC6_API void __stdcall n_set_hi(const UINT CardNo, const UINT HeadNo, const double GalvoGainX, const double GalvoGainY, const LONG GalvoOffsetX, const LONG GalvoOffsetY);
RTC6_API void __stdcall n_get_hi_pos(const UINT CardNo, const UINT HeadNo, LONG* X1, LONG* X2, LONG* Y1, LONG* Y2);
RTC6_API UINT __stdcall n_auto_cal(const UINT CardNo, const UINT HeadNo, const UINT Command);