RTC6/RTC6 Files/Windows/RTC6Import.pas

procedure n_get_waveform_offset(CardNo: LongWord; Channel: LongWord; Offset: LongWord; Number: LongWord; Ptr: PLongInt); stdcall; external RTC6DLL;
procedure n_get_waveform(CardNo: LongWord; Channel: LongWord; Number: LongWord; Ptr: PLongInt); stdcall; external RTC6DLL;
procedure n_bounce_supp(CardNo: LongWord; Length: LongWord); stdcall; external RTC6DLL;
procedure n_home_position_4(CardNo: LongWord; X0Home: LongInt; X1Home: LongInt; X2Home: LongInt; X3Home: LongInt); stdcall; external RTC6DLL;
procedure n_get_home_position_4(CardNo: LongWord; var X0Home: LongInt; var X1Home: LongInt; var X2Home: LongInt; var X3Home: LongInt); stdcall; external RTC6DLL;
procedure n_set_home_4_return_time(CardNo: LongWord; Time: LongWord); stdcall; external RTC6DLL;
function  n_get_home_4_return_time(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_home_position_xyz(CardNo: LongWord; XHome: LongInt; YHome: LongInt; ZHome: LongInt); stdcall; external RTC6DLL;
procedure n_home_position(CardNo: LongWord; XHome: LongInt; YHome: LongInt); stdcall; external RTC6DLL;
function  n_uart_config(CardNo: LongWord; BaudRate: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_rs232_config(CardNo: LongWord; BaudRate: LongWord); stdcall; external RTC6DLL;
procedure n_rs232_write_data(CardNo: LongWord; Data: LongWord); stdcall; external RTC6DLL;
procedure n_rs232_write_text(CardNo: LongWord; pData: PChar); stdcall; external RTC6DLL;
function  n_rs232_read_data(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_set_mcbsp_freq(CardNo: LongWord; Freq: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_mcbsp_init(CardNo: LongWord; XDelay: LongWord; RDelay: LongWord); stdcall; external RTC6DLL;
procedure n_mcbsp_init_spi(CardNo: LongWord; ClockLevel: LongWord; ClockDelay: LongWord); stdcall; external RTC6DLL;
function  n_get_overrun(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_master_slave(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_get_transform(CardNo: LongWord; Number: LongWord; Ptr1: PLongInt; Ptr2: PLongInt; Ptr: PLongWord; Code: LongWord); stdcall; external RTC6DLL;
procedure n_get_transform_offset(CardNo: LongWord; Channel1: LongWord; Channel2: LongWord; Offset: LongWord; Number: LongWord; Ptr1: PLongInt; Ptr2: PLongInt; Ptr: PLongWord; Code: LongWord); stdcall; external RTC6DLL;
procedure n_stop_trigger(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_move_to(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_set_enduring_wobbel(CardNo: LongWord; CenterX: LongWord; CenterY: LongWord; CenterZ: LongWord; LimitHi: LongWord; LimitLo: LongWord; ScaleX: Double; ScaleY: Double; ScaleZ: Double); stdcall; external RTC6DLL;
procedure n_set_enduring_wobbel_2(CardNo: LongWord; CenterX: LongWord; CenterY: LongWord; CenterZ: LongWord; LimitHi: LongWord; LimitLo: LongWord; ScaleX: Double; ScaleY: Double; ScaleZ: Double); stdcall; external RTC6DLL;
procedure n_set_free_variable(CardNo: LongWord; VarNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
function  n_get_free_variable(CardNo: LongWord; VarNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_set_mcbsp_out_ptr(CardNo: LongWord; Number: LongWord; SignalPtr: PLongWord); stdcall; external RTC6DLL;
procedure n_set_mcbsp_out_oie_ctrl(CardNo: LongWord; Signal1: LongWord; Signal2: LongWord); stdcall; external RTC6DLL;
procedure n_periodic_toggle(CardNo: LongWord; Port: LongWord; Mask: LongWord; P1: LongWord; P2: LongWord; Count: LongWord; Start: LongWord); stdcall; external RTC6DLL;
procedure n_multi_axis_config(CardNo: LongWord; Cfg: LongWord; Ptr: PLongWord); stdcall; external RTC6DLL;
procedure n_quad_axis_init(CardNo: LongWord; Idle: LongWord; X1: Double; Y1: Double); stdcall; external RTC6DLL;
function  n_quad_axis_get_status(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_quad_axis_get_values(CardNo: LongWord; var X1: Double; var Y1: Double; var Flags0: LongWord; var Flags1: LongWord); stdcall; external RTC6DLL;
function  n_get_temperature(CardNo: LongWord): Double; stdcall; external RTC6DLL;
function  get_time(): Double; stdcall; external RTC6DLL;
function  get_lap_time(): Double; stdcall; external RTC6DLL;
procedure measurement_status(var Busy: LongWord; var Pos: LongWord); stdcall; external RTC6DLL;
procedure get_waveform_offset(Channel: LongWord; Offset: LongWord; Number: LongWord; Ptr: PLongInt); stdcall; external RTC6DLL;
procedure get_waveform(Channel: LongWord; Number: LongWord; Ptr: PLongInt); stdcall; external RTC6DLL;
procedure bounce_supp(Length: LongWord); stdcall; external RTC6DLL;
procedure home_position_4(X0Home: LongInt; X1Home: LongInt; X2Home: LongInt; X3Home: LongInt); stdcall; external RTC6DLL;
procedure get_home_position_4(var X0Home: LongInt; var X1Home: LongInt; var X2Home: LongInt; var X3Home: LongInt); stdcall; external RTC6DLL;
procedure set_home_4_return_time(Time: LongWord); stdcall; external RTC6DLL;
function  get_home_4_return_time(): LongWord; stdcall; external RTC6DLL;
procedure home_position_xyz(XHome: LongInt; YHome: LongInt; ZHome: LongInt); stdcall; external RTC6DLL;
procedure home_position(XHome: LongInt; YHome: LongInt); stdcall; external RTC6DLL;
function  uart_config(BaudRate: LongWord): LongWord; stdcall; external RTC6DLL;
procedure rs232_config(BaudRate: LongWord); stdcall; external RTC6DLL;
procedure rs232_write_data(Data: LongWord); stdcall; external RTC6DLL;
procedure rs232_write_text(pData: PChar); stdcall; external RTC6DLL;
function  rs232_read_data(): LongWord; stdcall; external RTC6DLL;
function  set_mcbsp_freq(Freq: LongWord): LongWord; stdcall; external RTC6DLL;
procedure mcbsp_init(XDelay: LongWord; RDelay: LongWord); stdcall; external RTC6DLL;
procedure mcbsp_init_spi(ClockLevel: LongWord; ClockDelay: LongWord); stdcall; external RTC6DLL;
function  get_overrun(): LongWord; stdcall; external RTC6DLL;
function  get_master_slave(): LongWord; stdcall; external RTC6DLL;
procedure get_transform(Number: LongWord; Ptr1: PLongInt; Ptr2: PLongInt; Ptr: PLongWord; Code: LongWord); stdcall; external RTC6DLL;
procedure get_transform_offset(Channel1: LongWord; Channel2: LongWord; Offset: LongWord; Number: LongWord; Ptr1: PLongInt; Ptr2: PLongInt; Ptr: PLongWord; Code: LongWord); stdcall; external RTC6DLL;
procedure stop_trigger(); stdcall; external RTC6DLL;
procedure move_to(Pos: LongWord); stdcall; external RTC6DLL;
procedure set_enduring_wobbel(CenterX: LongWord; CenterY: LongWord; CenterZ: LongWord; LimitHi: LongWord; LimitLo: LongWord; ScaleX: Double; ScaleY: Double; ScaleZ: Double); stdcall; external RTC6DLL;
procedure set_enduring_wobbel_2(CenterX: LongWord; CenterY: LongWord; CenterZ: LongWord; LimitHi: LongWord; LimitLo: LongWord; ScaleX: Double; ScaleY: Double; ScaleZ: Double); stdcall; external RTC6DLL;
procedure set_free_variable(VarNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
function  get_free_variable(VarNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure set_mcbsp_out_ptr(Number: LongWord; SignalPtr: PLongWord); stdcall; external RTC6DLL;
procedure set_mcbsp_out_oie_ctrl(Signal1: LongWord; Signal2: LongWord); stdcall; external RTC6DLL;
procedure periodic_toggle(Port: LongWord; Mask: LongWord; P1: LongWord; P2: LongWord; Count: LongWord; Start: LongWord); stdcall; external RTC6DLL;
procedure multi_axis_config(Cfg: LongWord; Ptr: PLongWord); stdcall; external RTC6DLL;
procedure quad_axis_init(Idle: LongWord; X1: Double; Y1: Double); stdcall; external RTC6DLL;
function  quad_axis_get_status(): LongWord; stdcall; external RTC6DLL;
procedure quad_axis_get_values(var X1: Double; var Y1: Double; var Flags0: LongWord; var Flags1: LongWord); stdcall; external RTC6DLL;
function  get_temperature(): Double; stdcall; external RTC6DLL;
procedure n_set_defocus(CardNo: LongWord; Shift: LongInt); stdcall; external RTC6DLL;
procedure n_set_defocus_offset(CardNo: LongWord; Shift: LongInt); stdcall; external RTC6DLL;
procedure n_goto_xyz(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC6DLL;
procedure n_set_zoom(CardNo: LongWord; Zoom: LongWord); stdcall; external RTC6DLL;
procedure n_goto_xy(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
function  n_get_z_distance(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt): LongInt; stdcall; external RTC6DLL;
procedure set_defocus(Shift: LongInt); stdcall; external RTC6DLL;
procedure set_defocus_offset(Shift: LongInt); stdcall; external RTC6DLL;
procedure goto_xyz(X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC6DLL;
procedure goto_xy(X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure set_zoom(Zoom: LongWord); stdcall; external RTC6DLL;
function  get_z_distance(X: LongInt; Y: LongInt; Z: LongInt): LongInt; stdcall; external RTC6DLL;
procedure n_set_offset_xyz(CardNo: LongWord; HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; ZOffset: LongInt; at_once: LongWord); stdcall; external RTC6DLL;
procedure n_set_offset(CardNo: LongWord; HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; at_once: LongWord); stdcall; external RTC6DLL;
procedure n_set_matrix(CardNo: LongWord; HeadNo: LongWord; M11: Double; M12: Double; M21: Double; M22: Double; at_once: LongWord); stdcall; external RTC6DLL;
procedure n_set_angle(CardNo: LongWord; HeadNo: LongWord; Angle: Double; at_once: LongWord); stdcall; external RTC6DLL;
procedure n_set_scale(CardNo: LongWord; HeadNo: LongWord; Scale: Double; at_once: LongWord); stdcall; external RTC6DLL;
procedure n_apply_mcbsp(CardNo: LongWord; HeadNo: LongWord; at_once: LongWord); stdcall; external RTC6DLL;
function  n_upload_transform(CardNo: LongWord; HeadNo: LongWord; Ptr: PLongWord): LongWord; stdcall; external RTC6DLL;
procedure set_offset_xyz(HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; ZOffset: LongInt; at_once: LongWord); stdcall; external RTC6DLL;
procedure set_offset(HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; at_once: LongWord); stdcall; external RTC6DLL;
procedure set_matrix(HeadNo: LongWord; M11: Double; M12: Double; M21: Double; M22: Double; at_once: LongWord); stdcall; external RTC6DLL;
procedure set_angle(HeadNo: LongWord; Angle: Double; at_once: LongWord); stdcall; external RTC6DLL;
procedure set_scale(HeadNo: LongWord; Scale: Double; at_once: LongWord); stdcall; external RTC6DLL;
procedure apply_mcbsp(HeadNo: LongWord; at_once: LongWord); stdcall; external RTC6DLL;
function  upload_transform(HeadNo: LongWord; Ptr: PLongWord): LongWord; stdcall; external RTC6DLL;
procedure n_set_delay_mode(CardNo: LongWord; VarPoly: LongWord; DirectMove3D: LongWord; EdgeLevel: LongWord; MinJumpDelay: LongWord; JumpLengthLimit: LongWord); stdcall; external RTC6DLL;
procedure n_set_jump_speed_ctrl(CardNo: LongWord; Speed: Double); stdcall; external RTC6DLL;
procedure n_set_mark_speed_ctrl(CardNo: LongWord; Speed: Double); stdcall; external RTC6DLL;
procedure n_set_sky_writing_para(CardNo: LongWord; Timelag: Double; LaserOnShift: LongInt; Nprev: LongWord; Npost: LongWord); stdcall; external RTC6DLL;
procedure n_set_sky_writing_limit(CardNo: LongWord; CosAngle: Double); stdcall; external RTC6DLL;
procedure n_set_sky_writing_mode(CardNo: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
function  n_load_varpolydelay(CardNo: LongWord; Name: PChar; No: LongWord): LongInt; stdcall; external RTC6DLL;
procedure n_set_hi(CardNo: LongWord; HeadNo: LongWord; GalvoGainX: Double; GalvoGainY: Double; GalvoOffsetX: LongInt; GalvoOffsetY: LongInt); stdcall; external RTC6DLL;
procedure n_get_hi_pos(CardNo: LongWord; HeadNo: LongWord; var X1: LongInt; var X2: LongInt; var Y1: LongInt; var Y2: LongInt); stdcall; external RTC6DLL;
function  n_auto_cal(CardNo: LongWord; HeadNo: LongWord; Command: LongWord): LongWord; stdcall; external RTC6DLL;
